2005-08-10  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Warn if nsIPassword.h isn't found.

2005-08-10  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Fix configure checks for focus workaround.

2005-08-10  Crispin Flowerday  <gnome@flowerday.cx>

	* src/ephy-tab.c (ephy_tab_class_init): 

	Make a few properties to be writable (where there is appropriate code
	in the ephy_tab_set_property() function), and fix the 'icon' property
	to have the correct enum value.

2005-08-09  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* embed/mozilla/ContentHandler.cpp:
	
	Fix a small grammar error in one of the download
	dialog string, with approval of i18n
	
2005-08-09  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-tab.c: (ephy_tab_set_property):
	* src/ephy-tab.h:
	* src/epiphany.defs:

	Make tab icon address setter public.

2005-08-09  Crispin Flowerday  <gnome@flowerday.cx>

	* src/ephy-find-toolbar.c (ephy_find_toolbar_open): 

	When opening the find bar with Ctrl+F, search for
	the item, and select the text.

2005-08-09  Christian Persch  <chpe@cvs.gnome.org>

	* NEWS:

	Typo fixes.

	* src/ephy-tab.c: (ephy_tab_net_state_cb):

	Removed favicon fallback code.

2005-08-08  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2005-08-08  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.7.4 ===

	* NEWS:

2005-08-08  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks-editor.c:
	* src/ephy-toolbar.c: (ephy_toolbar_set_window):

	Tiny string fix just before string freeze :)

2005-08-08  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-favicon-cache.c: (ephy_favicon_cache_get):

	Disable favicons from non-http URLs.

2005-08-08  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/ContentHandler.cpp:

	Fix build with gecko trunk.

2005-08-08  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* embed/mozilla/ContentHandler.cpp:

	Change the download/open dialog strings to include the